Fixed bug causing white space below images

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -89,6 +89,7 @@ main {
 
 .work {
     display:flex;
+    flex-wrap: wrap;
     flex:1;
     margin-right: 15%;
     margin-left: 15%;
@@ -122,7 +123,7 @@ a img:hover {
 }
 
 
-.overlay1 {
+.overlay {
     position:absolute;
     bottom: 0;
     background-color: var(--lightblue);
@@ -131,16 +132,10 @@ a img:hover {
     color: var(--db);
 }
 
-.overlay2 {
-    position:absolute;
-    bottom: 0;
-    background-color: var(--lightblue);
-    font-size: 50px;
-    margin-left: 20px;
-    color: var(--db);
-}
 
 footer {
+    display:flex;
+    flex-wrap: wrap;
     font-size: 30px;
     color: var(--db);
     padding-right: 2%;
@@ -152,11 +147,12 @@ footer {
 footer h2 {
     border-right: 4px solid var(--db);
     margin-right: 90%;
+    display: inline-block;
 }
 
 
 footer li {
-    display: inline-block;
+    display: inline;
     margin-left: 20%;
     text-decoration: underline;
     color: var(--db);
